# activeStereoVisionPlatform

./: LICENSE.txt  README.md  cv2  rospy  runTracking.sh  saliencyMap.sh  vergeRun.launch  vergincyDepthClass
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
devel/include/dynamixel_workbench_msgs/: AX.h  DynamixelCommandRequest.h  DynamixelCommandResponse.h  DynamixelInfo.h  DynamixelLoadInfo.h  DynamixelState.h  DynamixelStateList.h  EX.h  GetDynamixelInfoRequest.h  GetDynamixelInfoResponse.h  JointCommandRequest.h  JointCommandResponse.h  MX.h  MX2.h  MX2Ext.h  MXExt.h  PRO.h  RX.h  WheelCommandRequest.h  WheelCommandResponse.h  XH.h  XL.h  XL320.h  XM.h  XMExt.h
devel/include/flea3/: Flea3DynConfig.h
devel/include/platform_vision/: pidConfig.h
devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
devel/lib/dynamixel_workbench_controllers/: multi_port  position_control  torque_control  velocity_control
devel/lib/dynamixel_workbench_operators/: joint_operator  wheel_operator
devel/lib/dynamixel_workbench_single_manager/: single_dynamixel_controller  single_dynamixel_monitor
devel/lib/dynamixel_workbench_single_manager_gui/: dynamixel_workbench_single_manager_gui
devel/lib/flea3/: flea3_async_trigger  flea3_list_cameras  flea3_single_node  flea3_stereo_node
devel/lib/pkgconfig/: arbotix_controllers.pc  arbotix_firmware.pc  arbotix_msgs.pc  arbotix_python.pc  arbotix_sensors.pc  camera_base.pc  dynamixel_workbench_controllers.pc  dynamixel_workbench_msgs.pc  dynamixel_workbench_operators.pc  dynamixel_workbench_single_manager.pc  dynamixel_workbench_single_manager_gui.pc  dynamixel_workbench_toolbox.pc  flea3.pc  my_dynamixel_workbench_tutorial.pc  platform_controller.pc  platform_vision.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  saliency_map.pc
devel/lib/platform_controller/: control_tilt_motors  controller  depth_based_verge  save_data_cpp  tf_publish
devel/lib/platform_vision/: calibration  collect_data  cross_corrolation  cross_corrolation_pyramid  disparity_node  match_stereo  platform_rectify_node  pointcloud_segmentation  rectify_image  rectify_img_bouguet  save_pointCloud  track_marker
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
src/my_dynamixel_workbench_tutorial/launch/: position_control.launch  single_manager.launch  single_monitor.launch  velocity_control.launch
src/otherWork/: CMakeLists.txt  package.xml
src/otherWork/src/: vergenceController.cpp
src/pkg_common/: CMakeLists.txt  package.xml
src/pkg_common/src/: IttiSaliencyMap.cpp
src/platform_controller/: CMakeLists.txt  package.xml  setup.py  urdf.rviz
src/platform_controller/launch/: ax-12.launch  both_cam_tracking.launch~  camera_start.launch~  contrller.launch  gazebo.launch  manager.launch  motorStart.launch  start_communication.launch  start_communication.launch~  track_object.launch~  view_demo.launch  (+1 more)
src/platform_gui/: CMakeLists.txt  package.xml
src/platform_urdf/: CMakeLists.txt  Your Unin-staller!.lnk  package.xml  urdf.rviz
src/platform_vision/: CMakeLists.txt  package.xml  setup.py
src/platform_vision/calibration/: 001_used_data.xml  002_used_data.xml  003_used_data.xml  004_used_data.xml  005_used_data.xml  b200.xml
src/platform_vision/camera_info/: depth.yaml  depth_parameters  pg_13242678.yaml
src/platform_vision/camera_info/camera_info1/: pg_15567446.yaml
src/platform_vision/cfg/: pid.cfg
src/platform_vision/config/: tomato.STL
src/platform_vision/include/: generate_disparity_map.h
src/platform_vision/launch/: both_cam_tracking.launch  camera_frame.launch  camera_start.launch  disparity.launch  image_rectify_file.launch  rectify_images.launch  stereo_node.launch  track_marker.launch
src/platform_vision/script/: fastMatchingPyramid.py  multi-target-test.py  pid_controller.py  saliencyMap.py  trackMarker.py
src/platform_vision/script/classes/: BaseFeatureMatching.py  MasterCameraController.py  PNCC.py  masterCamera.py  objectTracking.py  pySaliencyMapDefs.py  saveData.py  slaveMotor.py  trackByAruco.py  trackByColor.py  vergincyDepthClass.py
src/platform_vision/scripts/: calibrate_system.py  depthBasedFeatureMatching.py  masterCamera.py  pointcloud.py  slaveMotor.py  stereo_anaglyph.py
src/platform_vision/scripts/platform_vision/: MasterCameraController.py  PNCC.py  SlaveCameraController.py  featureMatching.py  helpFunctions.py  trackByAruco.py
src/platform_vision/src/: affordnceOfGrasping.cpp  calibration.cpp  camera_tf.cpp  collect_data.cpp  collect_data_epipolar.cpp  cross_corrolation.cpp  cross_corrolation_pyramid.cpp  cuda_test.cpp  disparity_node.cpp  disparity_node00.cpp  fastTemplateMtching.cpp  featureBasedMatchingCuda.cpp  gazeController.cpp  gazeControllerObjectTracking.cpp  gazeControllerPNCC.cpp  match_stereo.cpp  object_tracking.cpp  platform_rectify_node (copy).cpp  platform_rectify_node.cpp  pointcloud_segmentation.cpp  rectify_image.cpp  rectify_img_bouguet.cpp  save_pointCloud.cpp  save_pointCloud_old.cpp  structureFromMotion.cpp  track_marker.cpp
src/platform_vision/src/include/: FastMatchTemplate.cpp  FastMatchTemplate.h  PID_v1.h  disparityClass.h  featurematchingbasedcuda.h  helpFunctions.h  motorController.h  pointCloudHelpFunctions.h  thresholdPointCloud.h  vergenceClass.h
src/saliency_map/: CMakeLists.txt  package.xml  setup.py
src/visual_attention_base/: CMakeLists.txt  package.xml
(+151 files in other folders)
